--- a/bower.json
+++ b/bower.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": ">=1.2.*",
-    "json3": "~3.3.1",
-    "es5-shim": "~3.0.1",
-    "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
+    "angular-resource": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
+    "angular-ui-router": "~0.2.15",
+    "es5-shim": "~3.0.1",
     "font-awesome": ">=4.1.0",
-    "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.15"
+    "json3": "~3.3.1",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
