--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "serve-favicon": "~2.4.3"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "connect-livereload": "~0.6.0",
     "grunt": "~1.0.1",
     "grunt-angular-templates": "^1.1.0",
-    "grunt-autoprefixer": "~3.0.4",
     "grunt-build-control": "~0.7.1",
     "grunt-concurrent": "~2.3.1",
     "grunt-contrib-clean": "~1.1.0",
@@ -44,6 +44,7 @@
     "grunt-node-inspector": "~1.0.0",
     "grunt-nodemon": "~0.4.2",
     "grunt-open": "~0.2.3",
+    "grunt-postcss": "^0.8.0",
     "grunt-protractor-runner": "^5.0.0",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~4.0.0",
