--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-requirejs": "~1.1.0",
     "karma-script-launcher": "~1.0.0",
+    "mocha": "~3.4.2",
     "open": "~0.0.5",
     "requirejs": "~2.3.3",
     "should": "~11.2.1",
