--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "grunt-open": "~0.2.3",
     "grunt-postcss": "^0.8.0",
     "grunt-protractor-runner": "^5.0.0",
+    "grunt-regex-replace": "~0.4.0",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~4.0.0",
     "grunt-usemin": "~3.1.1",
