--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-protractor-runner": "^5.0.0",
     "grunt-regex-replace": "~0.4.0",
     "grunt-rev": "~0.1.0",
+    "grunt-shell": "~2.1.0",
     "grunt-svgmin": "~4.0.0",
     "grunt-usemin": "~3.1.1",
     "grunt-wiredep": "~3.0.1",
