--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-build-control": "~0.7.1",
     "grunt-concurrent": "~2.3.1",
     "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-compress": "~1.4.3",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-cssmin": "~2.2.0",
